tests/invalid/call_unexpected_kwarg/main.py
def add(a: int, b: int) -> int:
    return a + b


def run_case() -> None:
    add(c=1)

if __name__ == "__main__":
    run_case()
